--- a/gamelore.html
+++ b/gamelore.html
@@ -27,7 +27,7 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-              <li><a href="Homepage.html">Homepage </a></li>
+              <li><a href="homepage.html">Homepage </a></li>
               <li><a href="https://www.google.com">Save The Princess Game</a></li>
               <li><a href="contactus.html">Contact Us</a></li>
              </ul>
