--- a/gamelore.html
+++ b/gamelore.html
@@ -8,48 +8,67 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" type= "text/css"/>
     <link href="gamelore.css" rel="stylesheet">
-    <title>KentCom</title>
+    <title>KentCom- Game Lore</title>
   </head>
   <body>
     <header>
-        <nav class="navbar navbar-dark bg-dark" role="navigation">
-        <div class="container">
-          <!-- Brand and toggle get grouped for better mobile display -->
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a href="homepage.html" class="navbar-brand">KentCom</a>
-          </div>
-          <!-- Collect the nav links, forms, and other content for toggling -->
-          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-              <li><a href="homepage.html">Homepage </a></li>
-              <li><a href="https://www.google.com">Save The Princess Game</a></li>
-              <li><a href="contactus.html">Contact Us</a></li>
-             </ul>
-                    </div><!-- /.navbar-collapse -->
-        </div><!-- /.container -->
-      </nav>
-      <div class ="backgroundimg"</div>
-      <div class="card-header h5 text-center">Save The Princess Game Lore</div>
 
-      <div class="row">
-        <div class="col-md-10 my-img  ">
-          <img hspace= 10>
-          <img vspace = "10" src="scene1.png" id="img1" class="img-responsive" width="320px">
-          <img hspace = "55" src="scene2.png" id="img2" class="img-responsive" width="320px">
-          <img src="scene3.png" id="img3" class="img-responsive" width="320px">
-          <img hspace= 10>
-          <img vspace = "10" src="scene4.png" id="img1" class="img-responsive" width="320px">
-          <img hspace = "55" src="scene5.png" id="img2" class="img-responsive" width="320px">
-          <img src="scene6.png" id="img3" class="img-responsive" width="320px">
-          <img hspace= 10>
-          <img vspace = "10" src="scene7.png" id="img1" class="img-responsive" width="320px">
-          <img hspace = "55" src="scene8.png" id="img2" class="img-responsive" width="320px">
+      <ul class="card-header">Save The Princess Game Lore
+              <li><a href="main.html">HOME</a></li>
+      </ul>
+      <br>
+      <br>
+         <section class="lore">
+         <ul class = "gamelore">
+           <li>
+             <figure class ="photo">
+
+               <img hspace= "10" src="Images\lore\scene1.png">
+             </figure>
+           </li>
+           <li>
+             <figure class ="photo">
+               <img hspace = "55" src="Images\lore\scene2.png">
+             </figure>
+           </li>
+           <li>
+             <figure class ="photo">
+               <img hspace = "95" src="Images\lore\scene3.png">
+             </figure>
+           </li>
+           <li>
+             <figure class ="photo">
+               <img hspace = "10" vspace = "50" src="Images\lore\scene4.png">
+             </figure>
+           </li>
+           <li>
+             <figure class ="photo">
+               <img hspace = "55" vspace = "50" src="Images\lore\scene5.png">
+             </figure>
+           </li>
+           <li>
+             <figure class ="photo">
+               <img hspace = "95" vspace = "50"  src="Images\lore\scene6.png">
+             </figure>
+           </li>
+           <li>
+             <figure class ="photo">
+               <img hspace = "10" vspace = "10" src="Images\lore\scene7.png">
+             </figure>
+           </li>
+           <li>
+               <figure class ="photo">
+               <img hspace = "55" vspace= "10" src="Images\lore\scene8.png">
+               </figure>
+           </li>
+           <li>
+               <figure class ="photo">
+               <img hspace = "95" vspace= "10" src="Images\lore\scene9.png">
+               </figure>
+           </li>
+         </ul>
+       </section>
+
 
 
 
