--- a/contactus.html
+++ b/contactus.html
@@ -8,7 +8,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" type= "text/css"/>
-    <link href="contactus.css" rel="stylesheet">
+    <link href="CSS/contactus.css" rel="stylesheet">
     <title>KentCom-Contact Us</title>
   </head>
   <body>
