--- a/main.html
+++ b/main.html
@@ -1,25 +1,25 @@
 <html>
 <head>
   <title>KENTCOM-Home Page</title>
-  <link href = "style.css" rel="stylesheet" type="text/css">
+  <link href ="CSS/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <header>
     <div class = "row">
       <div class = "logo">
-        <img src="logo2.png">
+        <img src="Images\logo2.png">
       </div>
       <ul class ="main-nav">
         <li><a href="">KENTCOM</a></li>
-        <li><a href="">SIGN IN</a></li>
+        <li><a href="gamepage.html">SIGN IN</a></li>
         <li><a href="contactus.html">CONTACT US</a></li>
       </ul>
     </div>
     <div class = "title">
       <h1> SAVE THE PRINCESS</H1>
         <div class="buttonclass">
-        <a href="" class ="btn btn-lore"> Game Lore </a>
-        <a href="" class ="btn btn-rules"> Game Rules </a>
+        <a href="gamelore.html" class ="btn btn-lore"> Game Lore </a>
+        <a href="gamerule.html" class ="btn btn-rules"> Game Rules </a>
       </div>
     </div>
 </header>
