--- a/main.html
+++ b/main.html
@@ -1,4 +1,5 @@
-<html>
+<!doctype html>
+<html lang="en">
 <head>
   <title>KENTCOM-Home Page</title>
   <link href ="CSS/style.css" rel="stylesheet" type="text/css">
