--- a/gamelore.html
+++ b/gamelore.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" type= "text/css"/>
-    <link href="gamelore.css" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="CSS/gamelore.css">
     <title>KentCom- Game Lore</title>
   </head>
   <body>
