--- a/gamepage.html
+++ b/gamepage.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -5,7 +6,7 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" type= "text/css"/>
   <title>KENTCOM-Game Page</title>
-  <link href ="gamepage.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" type="text/css" href="CSS/gamepage.css">
 </head>
 <body>
   <header>
