--- a/gamerule.html
+++ b/gamerule.html
@@ -1,13 +1,14 @@
-<html>
+<!doctype html>
+<html lang="en">
 <head>
   <title>KENTCOM-Game Rules</title>
-  <link href ="gamerule.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" type="text/css" href="CSS/gamerule.css">
 </head>
 <body>
   <header>
     <div class = "row">
       <div class = "logo">
-        <img src="Images\logo2.png">
+        <img src="Images/logo2.png">
       </div>
       <ul class ="rules-nav">
         <li><a href="main.html">HOME</a></li>
